@@ -8,6 +8,7 @@
 6. Don't send a status message for a player if one is already being processed
    by LMS.
 7. Recalculate (i.e. set to 0) queue duration when cleared.
+8. Remove padding from track list in now-playing album info view.
 
 2.9.3
 -----
